cmake_minimum_required(VERSION 3.14)
project(TryLinuxSocket VERSION 0.1)

add_subdirectory(lesson1)
add_subdirectory(lesson2)
add_subdirectory(lesson3)
add_subdirectory(lesson4)
add_subdirectory(lesson5)
add_subdirectory(lesson6)
add_subdirectory(lesson7)
add_subdirectory(lesson8)
add_subdirectory(lesson9)
add_subdirectory(lesson10)
add_subdirectory(lesson11)
add_subdirectory(lesson12)
add_subdirectory(lesson13)

add_subdirectory(extra_unix_domain_socket)